[tool.poetry]
name = "ice_breaker"
version = "0.1.0"
description = ""
authors = ["10138103 <jk.choi@kt.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
langchain = "^0.2.11"
black = "^24.4.2"
openai = "^1.37.0"
google-search-results = "^2.4.2"
tweepy = "^4.14.0"
Flask = "^3.0.3"
langchain-openai = "^0.1.17"
langchain-community = "^0.2.10"
langchain-core = "^0.2.23"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pylint = "^3.2.6"
langchainhub = "^0.1.20"

[tool.poetry.dev-dependencies]
mypy = "^1.11.0"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true
# --strict end

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
